Bug 85362 - opencv_test_imgproc crash when test OCL_Imgproc/HoughLines.RealImage
Summary: opencv_test_imgproc crash when test OCL_Imgproc/HoughLines.RealImage
Status: CLOSED FIXED
Alias: None
Product: Beignet
Classification: Unclassified
Component: Beignet (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: medium normal
Assignee: Zhigang Gong
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-10-23 09:55 UTC by Yan Wang
Modified: 2014-10-24 05:49 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
error log and back trace for debugging. (10.24 KB, text/plain)
2014-10-23 09:55 UTC, Yan Wang
Details

Description Yan Wang 2014-10-23 09:55:09 UTC
Created attachment 108293 [details]
error log and back trace for debugging.

prerequisite:
unset OPENCV_TEST_DATA_PATH

Run:
opecv-test-imgproc --gtest_filter=OCL_Imgproc/HoughLines.RealImage*

Error:
[ RUN      ] OCL_Imgproc/HoughLines.RealImage/0
ASSERTION FAILED: defIt != bbIt->second->end() && defIt->second != NULL
  at file /home/yanwang/beignet/backend/src/ir/value.cpp, function gbe::ir::LiveOutSet::RegDefSet& gbe::ir::LiveOutSet::getDefSet(const gbe::ir::BasicBlock*, gbe::ir::Register), line 91
Comment 1 Yan Wang 2014-10-23 09:57:57 UTC
opencv: master(3.0-dev) commit e40567eaeeac42dd9dfd4791812fa866df84c206
beginet: master commit 1ea7977ee84df4c7607c82f0846307c63f8364df
Comment 2 Zhigang Gong 2014-10-24 03:04:30 UTC
Please verify whether the patch, I just sent to the mail list, could fix this bug. Thanks.

commit 2234c334af6c0254969e0748c7ba14ef2c8a009e
Author: Zhigang Gong <zhigang.gong@intel.com>
Date:   Fri Oct 24 09:55:34 2014 +0800

    GBE: handle dead loop BBs in liveness analysis.

    Considering the following CFG, our previous liveness analysis will only
    back traverse from the exit point BB, thus the BB 6 and 7 will not be handled.

        4---
        |   |
        |   |
        5 --|---> 10 ---> ret
        |   |
        |   |
        6<--
        |
        |<--
        7   |
        |   |
         ---

    Although the CFG looks not a normal application as once it goes to
    block 6, it will enter a dead loop and will never return, we still need
    to compile it successfully.

    This patch is to fix the bug at:
    https://bugs.freedesktop.org/show_bug.cgi?id=85362

    Signed-off-by: Zhigang Gong <zhigang.gong@intel.com>
Comment 3 Yan Wang 2014-10-24 05:34:34 UTC
I tried your patch and the bug is fixed. Thanks.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.